--- a/GigHub/Views/Gigs/Create.cshtml
+++ b/GigHub/Views/Gigs/Create.cshtml
@@ -6,8 +6,8 @@
 }
 
 <h2>Add a Gig</h2>
-
-<form>
+@using (Html.BeginForm("Create", "Gigs"))
+{
     <div class="form-group">
         @Html.LabelFor(m => m.Venue)
         @Html.TextBoxFor(m => m.Venue, new { @class = "form-control" })
@@ -21,8 +21,8 @@
         @Html.TextBoxFor(m => m.Time, new { @class = "form-control" })
     </div>
     <div class="form-group">
-        @Html.LabelFor(m=>m.Genre)
-        @Html.DropDownListFor(m=>m.Genre,new SelectList(Model.Genres,"Id","Name"),"---Select a Genre",new{@class="form-control"})
+        @Html.LabelFor(m => m.Genre)
+        @Html.DropDownListFor(m => m.Genre, new SelectList(Model.Genres, "Id", "Name"), "---Select a Genre", new { @class = "form-control" })
     </div>
     <button type="submit" value="Save" class="btn btn-primary">Save</button>
-</form>
+}
