--- a/GigHub/Views/Gigs/Create.cshtml
+++ b/GigHub/Views/Gigs/Create.cshtml
@@ -17,12 +17,12 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Date)
-        @Html.TextBoxFor(m => m.Date, new { @class = "form-control", placeholder="mm/ dd/ yyyy" })
+        @Html.TextBoxFor(m => m.Date, new { @class = "form-control", placeholder="eg. 1 Jan 2020" })
         @Html.ValidationMessageFor(m => m.Date)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Time)
-        @Html.TextBoxFor(m => m.Time, new { @class = "form-control", placeholder="24:00 AM"})
+        @Html.TextBoxFor(m => m.Time, new { @class = "form-control", placeholder="13:30"})
         @Html.ValidationMessageFor(m => m.Time)
     </div>
     <div class="form-group">
