--- a/GigHub/Content/Site.css
+++ b/GigHub/Content/Site.css
@@ -34,8 +34,9 @@ span.field-validation-error {
     border-color: #ff4342;
 }
 
-.navbar-inverse > .navbar-nav > li > a {
-    color: white;
+
+.navbar-inverse .navbar-nav > li > a {
+    color: #f5f5f5!important;
 }
 
 .navbar-inverse .navbar-brand {
