--- a/GigHub/Views/Shared/_LoginPartial.cshtml
+++ b/GigHub/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,7 @@
                     @User.Identity.GetUserName()<span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Gigs I'm Going</a></li>
+                    <li><a href="@Url.Action("Attend","Gigs")">Gigs I'm Going</a></li>
                     <li><a href="#">Artist I'm Following</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>                </ul>
