--- a/GigHub/Views/Shared/_LoginPartial.cshtml
+++ b/GigHub/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li><a href="@Url.Action("Attend","Gigs")">Gigs I'm Going</a></li>
-                    <li><a href="#">Artist I'm Following</a></li>
+                    <li><a href="@Url.Action("Follow","Artist")">Artist I'm Following</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>                </ul>
             </li>
