--- a/GigHub/Content/Site.css
+++ b/GigHub/Content/Site.css
@@ -29,19 +29,23 @@ span.field-validation-error {
 }
 
 /*Bootstrap Overrides*/
+.popover {
+    box-shadow: none;
+    -webkit-box-shadow: none;
+}
 .navbar-inverse {
     background-color: #ff4342;
     border-color: #ff4342;
 }
 
 
-.navbar-inverse .navbar-nav > li > a {
-    color: #f5f5f5!important;
-}
+    .navbar-inverse .navbar-nav > li > a {
+        color: #f5f5f5 !important;
+    }
 
-.navbar-inverse .navbar-brand {
-    color: white
-}
+    .navbar-inverse .navbar-brand {
+        color: white
+    }
 
 .dropdown-menu {
     box-shadow: none;
@@ -51,10 +55,23 @@ span.field-validation-error {
 .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover {
     background-color: rgba(205, 40, 39, 0.55);
 }
+
 .navbar-inverse .navbar-nav > .dropdown > a .caret {
     border-top-color: white;
     border-bottom-color: white;
 }
+
+.navbar-inverse .notifications {
+    position: relative;
+}
+
+    .navbar-inverse .notifications .badge {
+        position: absolute;
+        top: 8px;
+        right: 0;
+        right: -1px;
+        background-color: #a80a0a;
+    }
 
 .navbar-brand {
     font-weight: 700;
@@ -85,12 +102,13 @@ h6,
     padding: 5px 5px;
     border-radius: 9px;
 }
-.form-control:focus {
-    border-color: #66afe9;
-    outline: 0;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
+
+    .form-control:focus {
+        border-color: #66afe9;
+        outline: 0;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
 
 /*.btn {
     font-size: 17px;
@@ -102,53 +120,80 @@ h6,
     list-style: none;
 }
 
-.gigs > li {
-    position: relative;
-    margin-bottom: 30px;
-}
-
-.gigs > li .details {
-    position: absolute;
-    top: 0px;
-    left: 70px;
-}
-
-.gigs > li .date {
-    background-color: #ff4342;
-    color: white;
-    text-align: center;
-    width: 60px;
-    border-radius: 8px;
-}
-
-.gigs > li .date .month {
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: bold;
-    padding: 2px 6px;
-}
-    .gigs > li .date .day {
-        background-color: #f7f7f7;
-        color: #333;
-        font-size: 20px;
-        padding: 6px 12px;
+    .gigs > li {
+        position: relative;
+        margin-bottom: 30px;
     }
 
+        .gigs > li .details {
+            position: absolute;
+            top: 0px;
+            left: 70px;
+        }
 
-.gigs > li .details .artist {
-    font-weight: bold;
-    display: block;
+        .gigs > li .date {
+            background-color: #ff4342;
+            color: white;
+            text-align: center;
+            width: 60px;
+            border-radius: 8px;
+        }
+
+            .gigs > li .date .month {
+                text-transform: uppercase;
+                font-size: 14px;
+                font-weight: bold;
+                padding: 2px 6px;
+            }
+
+            .gigs > li .date .day {
+                background-color: #f7f7f7;
+                color: #333;
+                font-size: 20px;
+                padding: 6px 12px;
+            }
+
+
+        .gigs > li .details .artist {
+            font-weight: bold;
+            display: block;
+        }
+
+        .gigs > li .details .genre {
+            font-size: 13px;
+        }
+
+        .gigs > li .actions {
+            font-size: 15px;
+            display: none;
+        }
+
+        .gigs > li:hover .actions {
+            display: block;
+        }
+
+.popover-notifications .popover-content {
+    padding: 0;
 }
 
-.gigs > li .details .genre {
-    font-size: 13px;
+.popover-notifications ul.notifications {
+    list-style: none;
+    padding-left: 0;
 }
 
-.gigs > li .actions {
-    font-size: 15px;
-    display: none;
-}
+    .popover-notifications ul.notifications > li {
+        border-bottom: 1px solid black;
+        padding: 10px 0;
+    }
 
-.gigs > li:hover .actions {
-    display: block;
+        .popover-notifications ul.notifications > li:last-child {
+            border-bottom: none;
+        }
+
+    .popover-notifications ul.notifications .highlight {
+        font-weight: bold;
+    }
+
+div#SearchGigs {
+    width: 300px;
 }
